rename to p6m-dev

--- a/0-debian/bullseye/Dockerfile
+++ b/0-debian/bullseye/Dockerfile
@@ -33,7 +33,7 @@ RUN apt-get update && \
     ca-certificates debsums gpg libssl-dev tzdata wget \
     && rm -rf /var/lib/apt/lists/*
 
-ENV BASE_IMAGE_MAINTAINER "nax-platform"
+ENV BASE_IMAGE_MAINTAINER "p6m-dev"
 ENV BASE_IMAGE_OS "debian"
 ENV BASE_IMAGE_OS_VERSION "bullseye"
 ENV BASE_IMAGE_OS_PKGSUM_FILE="/var/lib/dpkg/sha256sum"
