--- a/2-cargo-chef/rust-bullseye/Dockerfile
+++ b/2-cargo-chef/rust-bullseye/Dockerfile
@@ -1,5 +1,5 @@
 ARG IMAGE_TAG
-FROM naxgrp/rust:${IMAGE_TAG}
+FROM p6m-dev/rust:${IMAGE_TAG}
 ARG VERSION
 ENV CARGO_REGISTRIES_CRATES_IO_PROTOCOL=sparse
 
