--- a/2-dogshell/jammy/Dockerfile
+++ b/2-dogshell/jammy/Dockerfile
@@ -1,4 +1,4 @@
-FROM naxgrp/python:3.11-jammy
+FROM p6m-dev/python:3.11-jammy
 
 RUN pip install datadog
 RUN apt-get update && apt-get install -y jq
