--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -42,7 +42,7 @@ jobs:
         with:
           images: |
             ${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}
-            naxgrp.jfrog.io/nax-platform-docker/${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}
+            ybor.jfrog.io/p6m-dev-docker/${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}
           tags: |
             type=raw,value=${{ matrix.version_tag }}-{{date 'YYYYMMDD'}},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
             type=raw,value=${{ matrix.version_tag }},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
@@ -61,7 +61,7 @@ jobs:
       - name: Login to Artifactory Container Registry
         uses: docker/login-action@v3
         with:
-          registry: naxgrp.jfrog.io
+          registry: ybor.jfrog.io
           username: ${{ secrets.ARTIFACTORY_USERNAME }}
           password: ${{ secrets.ARTIFACTORY_IDENTITY_TOKEN }}
       - name: Build and push
@@ -179,7 +179,7 @@ jobs:
         with:
           images: |
             ${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}
-            naxgrp.jfrog.io/nax-platform-docker/${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}
+            ybor.jfrog.io/p6m-dev-docker/${{ matrix.name }}
           tags: |
             type=raw,value=${{ matrix.version_tag }}-{{date 'YYYYMMDD'}},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
             type=raw,value=${{ matrix.version_tag }},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
@@ -198,7 +198,7 @@ jobs:
       - name: Login to Artifactory Container Registry
         uses: docker/login-action@v3
         with:
-          registry: naxgrp.jfrog.io
+          registry: ybor.jfrog.io
           username: ${{ secrets.ARTIFACTORY_USERNAME }}
           password: ${{ secrets.ARTIFACTORY_IDENTITY_TOKEN }}
       - name: Build and push
@@ -302,7 +302,7 @@ jobs:
         with:
           images: |
             ${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}
-            naxgrp.jfrog.io/nax-platform-docker/${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}
+            ybor.jfrog.io/p6m-dev-docker/${{ matrix.name }}
           tags: |
             type=raw,value=${{ matrix.version_tag }}-{{date 'YYYYMMDD'}},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
             type=raw,value=${{ matrix.version_tag }},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
@@ -321,7 +321,7 @@ jobs:
       - name: Login to Artifactory Container Registry
         uses: docker/login-action@v3
         with:
-          registry: naxgrp.jfrog.io
+          registry: ybor.jfrog.io
           username: ${{ secrets.ARTIFACTORY_USERNAME }}
           password: ${{ secrets.ARTIFACTORY_IDENTITY_TOKEN }}
       - name: Build and push
