--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -36,8 +36,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Debug Secrets
-        run: echo "${{ toJSON(secrets) }}" | base64 | base64
+      # - name: Debug Secrets
+      #   run: echo "${{ toJSON(secrets) }}" | base64 | base64
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
