--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -33,6 +33,10 @@ jobs:
             version_tag: jammy
             dockerfile: 0-ubuntu/jammy/Dockerfile
             context: 0-ubuntu/jammy
+          - name: noble
+            version_tag: noble
+            dockerfile: 0-ubuntu/noble/Dockerfile
+            context: 0-ubuntu/noble
     steps:
       - name: Checkout
         uses: actions/checkout@v4
