switch to gha cache

--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -83,8 +83,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache
-          cache-to: type=registry,ref=${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache,mode=max
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
       - name: Record Summary
         run: |
           echo "### Docker Tags" >> $GITHUB_STEP_SUMMARY
@@ -231,8 +231,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache
-          cache-to: type=registry,ref=${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache,mode=max
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
       - name: Record Summary
         run: |
           echo "### Docker Tags" >> $GITHUB_STEP_SUMMARY
@@ -364,8 +364,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache
-          cache-to: type=registry,ref=${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache,mode=max
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
       - name: Record Summary
         run: |
           echo "### Docker Tags" >> $GITHUB_STEP_SUMMARY
