--- a/2-devcontainer/universal/Dockerfile
+++ b/2-devcontainer/universal/Dockerfile
@@ -4,9 +4,9 @@ FROM ybor/ubuntu:noble AS base
 # https://github.com/devcontainers/images/blob/main/src/universal/.devcontainer/Dockerfile
 
 RUN if id "ubuntu" &>/dev/null; then \
-            echo "Deleting user 'ubuntu' for noble" && userdel -f -r ubuntu || echo "Failed to delete ubuntu user for noble"; \  
-        else \
-            echo "User 'ubuntu' does not exist for noble"; \ 
+    echo "Deleting user 'ubuntu' for noble" && userdel -f -r ubuntu || echo "Failed to delete ubuntu user for noble"; \  
+    else \
+    echo "User 'ubuntu' does not exist for noble"; \ 
     fi
 
 COPY first-run-notice.txt /tmp/scripts/
@@ -20,44 +20,44 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     # Install basic build tools
     && apt-get upgrade -y \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-        make \
-        unzip \
-        # The tools in this package are used when installing packages for Python
-        build-essential \
-        swig3.0 \
-        # Required for Microsoft SQL Server
-        unixodbc-dev \
-        # Required for PostgreSQL
-        libpq-dev \
-        # Required for mysqlclient
-        default-libmysqlclient-dev \
-        # Required for ts
-        moreutils \
-        rsync \
-        zip \
-        libgdiplus \
-        jq \
-        # By default pip is not available in the buildpacks image
-        python3-pip \
-        #.NET Core related pre-requisites
-        libc6 \
-        libgcc1 \
-        libgssapi-krb5-2 \
-        libncurses6 \
-        liblttng-ust1 \
-        libssl-dev \
-        libstdc++6 \
-        zlib1g \
-        libuuid1 \
-        libunwind8 \
-        sqlite3 \
-        libsqlite3-dev \
-        software-properties-common \
-        tk-dev \
-        uuid-dev \
-        curl \
-        gettext \
-        inotify-tools \
+    make \
+    unzip \
+    # The tools in this package are used when installing packages for Python
+    build-essential \
+    swig3.0 \
+    # Required for Microsoft SQL Server
+    unixodbc-dev \
+    # Required for PostgreSQL
+    libpq-dev \
+    # Required for mysqlclient
+    default-libmysqlclient-dev \
+    # Required for ts
+    moreutils \
+    rsync \
+    zip \
+    libgdiplus \
+    jq \
+    # By default pip is not available in the buildpacks image
+    python3-pip \
+    #.NET Core related pre-requisites
+    libc6 \
+    libgcc1 \
+    libgssapi-krb5-2 \
+    libncurses6 \
+    liblttng-ust1 \
+    libssl-dev \
+    libstdc++6 \
+    zlib1g \
+    libuuid1 \
+    libunwind8 \
+    sqlite3 \
+    libsqlite3-dev \
+    software-properties-common \
+    tk-dev \
+    uuid-dev \
+    curl \
+    gettext \
+    inotify-tools \
     && rm -rf /var/lib/apt/lists/* \
     # This is the folder containing 'links' to benv and build script generator
     && apt-get update \
@@ -85,15 +85,15 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 # Install libssl1.1 for oryx compatibility based on architecture
 RUN ARCH=$(uname -m) && \
     if [ "$ARCH" = "x86_64" ] || [ "$ARCH" = "amd64" ]; then \
-        curl -fsSL -o libssl1.1_1.1.0g-2ubuntu4_amd64.deb http://archive.ubuntu.com/ubuntu/pool/main/o/openssl/libssl1.1_1.1.0g-2ubuntu4_amd64.deb && \
-        dpkg -i libssl1.1_1.1.0g-2ubuntu4_amd64.deb && \
-        rm libssl1.1_1.1.0g-2ubuntu4_amd64.deb; \
+    curl -fsSL -o libssl1.1_1.1.0g-2ubuntu4_amd64.deb http://archive.ubuntu.com/ubuntu/pool/main/o/openssl/libssl1.1_1.1.0g-2ubuntu4_amd64.deb && \
+    dpkg -i libssl1.1_1.1.0g-2ubuntu4_amd64.deb && \
+    rm libssl1.1_1.1.0g-2ubuntu4_amd64.deb; \
     elif [ "$ARCH" = "aarch64" ] || [ "$ARCH" = "arm64" ]; then \
-        curl -fsSL -o libssl1.1_1.1.1f-1ubuntu2_arm64.deb http://ports.ubuntu.com/pool/main/o/openssl/libssl1.1_1.1.1f-1ubuntu2_arm64.deb && \
-        dpkg -i libssl1.1_1.1.1f-1ubuntu2_arm64.deb && \
-        rm libssl1.1_1.1.1f-1ubuntu2_arm64.deb; \
+    curl -fsSL -o libssl1.1_1.1.1f-1ubuntu2_arm64.deb http://ports.ubuntu.com/pool/main/o/openssl/libssl1.1_1.1.1f-1ubuntu2_arm64.deb && \
+    dpkg -i libssl1.1_1.1.1f-1ubuntu2_arm64.deb && \
+    rm libssl1.1_1.1.1f-1ubuntu2_arm64.deb; \
     else \
-        echo "Unsupported architecture: $ARCH" && exit 1; \
+    echo "Unsupported architecture: $ARCH" && exit 1; \
     fi
 
 # Default to bash shell (other shells available at /usr/bin/fish and /usr/bin/zsh)
@@ -108,31 +108,29 @@ CMD [ "sleep", "infinity" ]
 # [Optional] Install debugger for development of Codespaces - Not in resulting image by default
 ARG DeveloperBuild
 RUN if [ -z $DeveloperBuild ]; then \
-        echo "not including debugger" ; \
+    echo "not including debugger" ; \
     else \
-        curl -sSL https://aka.ms/getvsdbgsh | bash /dev/stdin -v latest -l /vsdbg ; \
+    curl -sSL https://aka.ms/getvsdbgsh | bash /dev/stdin -v latest -l /vsdbg ; \
     fi
 
 # Custom ybor tooling
 FROM base
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-        direnv \
-        nix \
-    && echo 'source /nix/var/nix/profiles/default/etc/profile.d/nix.sh' >> /etc/profile \
-    && echo 'eval "$(direnv hook bash)"' >> /etc/profile \
+    direnv nix \
     && rm -rf /var/lib/apt/lists/*
 
-# SOURCED FROM https://raw.githubusercontent.com/direnv/direnv/master/stdlib.sh
-COPY stdlib.sh /etc/direnv/lib/stdlib.sh
+# Set global direnv config and nix PATH
+ENV DIRENV_CONFIG=/etc/direnv \
+    PATH="/nix/var/nix/profiles/system/bin:/usr/bin:/bin:$PATH" \
+    NIX_PATH="nixpkgs=channel:nixos-unstable"
 
-# Pre-authorize `use nix` in any .envrc by globally overriding direnv's stdlib
-RUN echo 'allow_nix() { [[ "$(cat .envrc 2>/dev/null)" == "use nix" ]] && return 0 || return 1; }' >> /etc/direnv/lib/stdlib.sh \
-    && echo 'if [[ -f .envrc ]]; then allow_nix || direnv deny; fi' >> /etc/profile \
-    && chmod +x /etc/direnv/lib/stdlib.sh
+COPY system.nix system.nix
 
-ENV NIX_REMOTE=daemon
-ENV NIX_PATH=/nix/var/nix/profiles/per-user/root/channels
-ENV DIRENV_LOG_FORMAT=
+RUN --mount=type=cache,target=/root/.cache/nix \
+    nix-env -p /nix/var/nix/profiles/system -f system.nix -i \
+    && echo "Nix packages installed to system profile"
 
-CMD ["sleep", "infinity"]
+WORKDIR /
+
+CMD [ "sleep", "infinity" ]
