caching and rate limit helping

--- a/0-alpine/3.18/Dockerfile
+++ b/0-alpine/3.18/Dockerfile
@@ -1,29 +1,24 @@
-FROM alpine:3.18 as pkgsum
+FROM alpine:3.18 as upgraded
 
-ARG CACHE_BUST
-ENV CACHE_BUST=${CACHE_BUST}
 ENV TZ=UTC
 
-# Make sure this command matches the one below EXACTLY
-RUN apk update && \
-    apk upgrade --no-cache
+# Update and upgrade packages
+RUN apk update && apk upgrade --no-cache
 
 # Calculate the sum of all installed packages, which will override Docker cache if something changed
-RUN mkdir -p /var/lib/apk/
-RUN apk info -vv | awk '/^\/[^\/]/{print $1}' | xargs sha256sum | sha256sum | cut -d ' ' -f 1 > /var/lib/apk/sha256sum
+RUN mkdir -p /var/lib/apk/ && \
+    apk info -vv | awk '/^\/[^\/]/{print $1}' | xargs sha256sum | sha256sum | cut -d ' ' -f 1 > /var/lib/apk/sha256sum
 
-FROM alpine:3.18
-
-ENV TZ=UTC
+FROM alpine:3.18 AS final
 
 # This will override the cache if any packages were upgraded
-COPY --from=pkgsum /var/lib/apk/sha256sum /var/lib/apk/sha256sum
+COPY --from=upgraded /var/lib/apk/sha256sum /var/lib/apk/sha256sum
 
+# Echo the package sum for cache validation
 RUN echo "PKGSUM is $(cat /var/lib/apk/sha256sum)"
 
-# Make sure this command matches the one above EXACTLY
-RUN apk update && \
-    apk upgrade --no-cache
+# Apply the same updates as the upgraded stage
+RUN apk update && apk upgrade --no-cache
 
 ENV BASE_IMAGE_MAINTAINER "ybor"
 ENV BASE_IMAGE_OS "alpine"
