fix env var warnings

--- a/0-ubuntu/noble/Dockerfile
+++ b/0-ubuntu/noble/Dockerfile
@@ -32,7 +32,7 @@ RUN apt-get update && \
     ca-certificates debsums gpg libssl-dev tzdata wget \
     && rm -rf /var/lib/apt/lists/*
 
-ENV BASE_IMAGE_MAINTAINER "ybor"
-ENV BASE_IMAGE_OS "ubuntu"
-ENV BASE_IMAGE_OS_VERSION "noble"
+ENV BASE_IMAGE_MAINTAINER="ybor"
+ENV BASE_IMAGE_OS="ubuntu"
+ENV BASE_IMAGE_OS_VERSION="noble"
 ENV BASE_IMAGE_OS_PKGSUM_FILE="/var/lib/dpkg/sha256sum"
