--- a/0-alpine/3.17/Dockerfile
+++ b/0-alpine/3.17/Dockerfile
@@ -20,7 +20,7 @@ RUN echo "PKGSUM is $(cat /var/lib/apk/sha256sum)"
 # Apply the same updates as the upgraded stage
 RUN apk update && apk upgrade --no-cache
 
-ENV BASE_IMAGE_MAINTAINER "ybor"
-ENV BASE_IMAGE_OS "alpine"
-ENV BASE_IMAGE_OS_VERSION "3.17"
+ENV BASE_IMAGE_MAINTAINER="ybor"
+ENV BASE_IMAGE_OS="alpine"
+ENV BASE_IMAGE_OS_VERSION="3.17"
 ENV BASE_IMAGE_OS_PKGSUM_FILE="/var/lib/apk/sha256sum"
