--- a/0-ubuntu/jammy/Dockerfile
+++ b/0-ubuntu/jammy/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:jammy AS upgraded
+FROM public.ecr.aws/ubuntu/ubuntu:jammy AS upgraded
 
 ARG CACHE_BUST
 ENV CACHE_BUST=${CACHE_BUST}
@@ -15,7 +15,7 @@ RUN apt-get update && \
 RUN debsums --silent --all --generate=missing && \
     cat /var/lib/dpkg/info/*.md5sums | sha256sum | cut -d' ' -f1 > /var/lib/dpkg/sha256sum
 
-FROM ubuntu:jammy AS final
+FROM public.ecr.aws/ubuntu/ubuntu:jammy AS final
 
 ENV TZ=UTC
 
