--- a/2-cloudfront-invalidator-v2/aws-cli/Dockerfile
+++ b/2-cloudfront-invalidator-v2/aws-cli/Dockerfile
@@ -1,5 +1,6 @@
+ARG REGISTRY_PREFIX=ghcr.io/${GITHUB_REPOSITORY_OWNER:-p6m-dev}
 ARG IMAGE_TAG
-FROM ybor/aws-cli:${IMAGE_TAG}
+FROM ${REGISTRY_PREFIX}/aws-cli:${IMAGE_TAG}
 
 WORKDIR /
 
