--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -53,6 +53,7 @@ jobs:
         with:
           images: |
             ${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}
+            ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}
             p6m.jfrog.io/p6m-dev-docker/${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}
           tags: |
             type=raw,value=${{ matrix.version_tag }}-{{date 'YYYYMMDD'}},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
@@ -69,6 +70,12 @@ jobs:
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN_RW }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Login to Artifactory Container Registry
         uses: docker/login-action@v3
         with:
@@ -195,6 +202,7 @@ jobs:
         with:
           images: |
             ${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}
+            ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}
             p6m.jfrog.io/p6m-dev-docker/${{ matrix.name }}
           tags: |
             type=raw,value=${{ matrix.version_tag }}-{{date 'YYYYMMDD'}},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
@@ -211,6 +219,12 @@ jobs:
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN_RW }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Login to Artifactory Container Registry
         uses: docker/login-action@v3
         with:
@@ -324,7 +338,7 @@ jobs:
             version_arg: "" # unused
             builder_image_tag_arg: "" # unused
             image_tag_arg: "" # unuesd
-            variants: "linux/amd64" # ,linux/arm64"
+            variants: "linux/amd64,linux/arm64"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -334,6 +348,7 @@ jobs:
         with:
           images: |
             ${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}
+            ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}
             p6m.jfrog.io/p6m-dev-docker/${{ matrix.name }}
           tags: |
             type=raw,value=${{ matrix.version_tag }}-{{date 'YYYYMMDD'}},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
@@ -350,6 +365,12 @@ jobs:
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN_RW }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Login to Artifactory Container Registry
         uses: docker/login-action@v3
         with:
