--- a/1-amazoncorretto/alpine3.17/Dockerfile
+++ b/1-amazoncorretto/alpine3.17/Dockerfile
@@ -1,4 +1,5 @@
-FROM ybor/alpine:3.17
+ARG REGISTRY_PREFIX=ghcr.io/${GITHUB_REPOSITORY_OWNER:-p6m-dev}
+FROM ${REGISTRY_PREFIX}/alpine:3.17
 
 ARG VERSION
 
