--- a/2-grpcurl/alpine3.17/Dockerfile
+++ b/2-grpcurl/alpine3.17/Dockerfile
@@ -1,4 +1,4 @@
-ARG REGISTRY_PREFIX=ghcr.io/${GITHUB_REPOSITORY_OWNER:-p6m-dev}
+ARG REGISTRY_PREFIX=ybor
 ARG BUILDER_IMAGE_TAG="1.21"
 ARG IMAGE_TAG="3.17"
 FROM ${REGISTRY_PREFIX}/golang:${BUILDER_IMAGE_TAG} as builder
