--- a/2-cloudfront-invalidator-v2/aws-cli/Dockerfile
+++ b/2-cloudfront-invalidator-v2/aws-cli/Dockerfile
@@ -1,4 +1,4 @@
-ARG REGISTRY_PREFIX=ghcr.io/${GITHUB_REPOSITORY_OWNER:-p6m-dev}
+ARG REGISTRY_PREFIX=ybor
 ARG IMAGE_TAG
 FROM ${REGISTRY_PREFIX}/aws-cli:${IMAGE_TAG}
 
