--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -15,6 +15,8 @@ permissions:
   contents: read
   packages: write
   actions: read
+  attestations: write
+  id-token: write
 
 jobs:
   base: # This tier builds any os-specific containers
@@ -102,6 +104,12 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+      - name: Attest build provenance
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-name: ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}
+          subject-digest: ${{ steps.build-push.outputs.digest }}
+          push-to-registry: true
       - name: Record Summary
         run: |
           echo "### Docker Tags" >> $GITHUB_STEP_SUMMARY
@@ -253,6 +261,12 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+      - name: Attest build provenance
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-name: ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}
+          subject-digest: ${{ steps.build-push.outputs.digest }}
+          push-to-registry: true
       - name: Record Summary
         run: |
           echo "### Docker Tags" >> $GITHUB_STEP_SUMMARY
@@ -402,6 +416,12 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+      - name: Attest build provenance
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-name: ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}
+          subject-digest: ${{ steps.build-push.outputs.digest }}
+          push-to-registry: true
       - name: Record Summary
         run: |
           echo "### Docker Tags" >> $GITHUB_STEP_SUMMARY
