--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -22,6 +22,7 @@ jobs:
   base: # This tier builds any os-specific containers
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 10
       fail-fast: false
       matrix:
         include:
@@ -119,6 +120,7 @@ jobs:
       - base
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 10
       fail-fast: false
       matrix:
         include:
@@ -277,6 +279,7 @@ jobs:
       - lang
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 10
       fail-fast: false
       matrix:
         include:
