--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -362,7 +362,7 @@ jobs:
             version_arg: "" # unused
             builder_image_tag_arg: "" # unused
             image_tag_arg: "" # unuesd
-            variants: "linux/amd64,linux/arm64"
+            variants: "linux/amd64" #,linux/arm64"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
